1998-10-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_get_items_per_line): Export
	this routine.

	* gnome-icon-item.c (iti_unrealize): Only call iti_stop_editing if
	an editing was in course.
	(iti_realize): account for the fact that we can be realized before
	being configured (ie, the canvas is already visible).
	(gnome_icon_text_item_configure): If the item has been realized do
	the icon computations.

	* gnome-icon-list.c (gnome_icon_list_set_separators): Implemented
	missing routine.

	(gnome_icon_list_new): As we depend on Imlib for drawing icons,
	always use the Imlib visual.
	
1998-10-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_init): Now by default
	lines start in width_pixels mode turned off, to be consistent with
	rectangles and ellipses.

1998-10-13  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.h, gnome-canvas.c (gnome_canvas_world_to_window):
	New function, inverse of gnome_canvas_window_to_world.

1998-10-13  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-list.h, gnome-icon-list.c: Add
	gnome_icon_list_construct function, and use it in _new.

1998-10-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (gnome_mdi_open_toplevel): restrict MDI
	to a single toplevel when in modal mode.
	* gnome-mdi.[ch] (gnome_mdi_set_window_view): removed:
	gnome_mdi_set_active_view does precisely that and even more!
	* gnome-mdi-session.c (gnome_mdi_restore_state): replaced
	gnome_mdi_set_window_view() with gnome_mdi_set_active_view()
	and removed a hash table lookup for the app since mdi retrieves
	it from the view.
	
1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* gnome-app-helper.c (create_menu_item): When the label is the
	empty string, don't call gettext on it. This is required since
	gettext maps the empty string to the header lines at the beginning
 	of the .pot files.

1998-10-12  Miguel de Icaza  <miguel@nuclecu.unam.mx>
